Commit al master del blogpost en su versión más reciente.

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="\styles\styles.css" />
   </head>
   <body>
-    <h1>Éste es el blog donde soltamos la lengua constructivamente.</h1>
-    <p
-      >Hablaremos sin tapujos sobre los temas de actualidad, las conductas tóxicas que normalizamos
-      bajo positivismo tóxico y bajo la doctrina del esclavo y el maestro.</p
-    >
+    <div id="container">
+      <div id="post">
+        <h1>Éste es el blog donde soltamos la lengua constructivamente.</h1>
+        <p
+          >Hablaremos sin tapujos sobre los temas de actualidad, las conductas tóxicas que
+          normalizamos bajo positivismo tóxico y bajo la doctrina del esclavo y el maestro.</p
+        >
+      </div>
+    </div>
   </body>
 </html>
