--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="container">
+      <div id="cabecera">CABECERA DEL POST</div>
       <div id="post">
         <h1>Éste es el blog donde soltamos la lengua constructivamente.</h1>
         <p
