Agregado el contenido adicional del blog y cambio de tipografía.

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,12 @@
           >Hablaremos sin tapujos sobre los temas de actualidad, las conductas tóxicas que
           normalizamos bajo positivismo tóxico y bajo la doctrina del esclavo y el maestro.</p
         >
+        <p>
+          Este blog es un espacio construído y pensado especialmente para hablar abiertamente de
+          todas las situaciones incómodas relacionadas a tu vida laboral, donde podrás compartir sin
+          prejuicios y con la libertad de que serás leído por gente que comparte experiencias
+          similares a la tuya, todas ellas relacionadas con el fenómeno social de Burnout.
+        </p>
       </div>
     </div>
   </body>
