Se modifica texto de cabecera y color de texto.

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
       <div id="cabecera"
         >BlogAholic
-        <span id="tagline">Un espacio para desestresarte.</span>
+        <span id="tagline">Un espacio para que te hagas escuchar.</span>
       </div>
       <div id="post">
         <h1>Éste es el blog donde soltamos la lengua constructivamente.</h1>
