Se agrega párrafo con comentario de Suscripción al blog y like a la publicación.

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
       <div id="cabecera"
         >BlogAholic
-        <span id="tagline">Un espacio para desestresarte.</span>
+        <span id="tagline">Un espacio para masterizar todo tu enojo.</span>
       </div>
       <div id="post">
         <h1>Éste es el blog donde soltamos la lengua constructivamente.</h1>
@@ -25,6 +25,7 @@
           prejuicios y con la libertad de que serás leído por gente que comparte experiencias
           similares a la tuya, todas ellas relacionadas con el fenómeno social de Burnout.
         </p>
+        <p> Suscríbete si te gustó el contenido y deja un like a la publicación. </p>
       </div>
     </div>
   </body>
