--- a/blogpost.html
+++ b/blogpost.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div id="container">
-      <div id="cabecera"
-        >BlogAholic
+      <div id="cabecera">
+        <img id="logo" src="images/dragon.png" alt="logo_cohete" />
+        BlogAholic
         <span id="tagline">Un espacio para que te hagas escuchar.</span>
       </div>
       <div id="post">
