--- a/blogpost.html
+++ b/blogpost.html
@@ -21,10 +21,10 @@
           normalizamos bajo positivismo tóxico y bajo la doctrina del esclavo y el maestro.</p
         >
         <p>
-          Este blog es un espacio construído y pensado especialmente para hablar abiertamente de
-          todas las situaciones incómodas relacionadas a tu vida laboral, donde podrás compartir sin
+          Este blog es un espacio construído y pensado especialmente para hablar abiertamente de las
+          situaciones incómodas relacionadas a tu vida laboral, donde podrás compartir sin
           prejuicios y con la libertad de que serás leído por gente que comparte experiencias
-          similares a la tuya, todas ellas relacionadas con el fenómeno social de Burnout.
+          similares a la tuya, todas ellas, relacionadas con el fenómeno social de Burnout.
         </p>
         <p> Suscríbete si te gustó el contenido y deja un like a la publicación. </p>
       </div>
