--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
           >Hablaremos sin tapujos sobre los temas de actualidad, las conductas tóxicas que
           normalizamos bajo positivismo tóxico y bajo la doctrina del esclavo y el maestro.</p
         >
-        <p><img src="/images/varamosf.jpg.jpg" alt="Foto Victor Ramos" /></p>
+        <p><img src="https://i.imgur.com/jjQB8RV.jpeg" alt="Foto Audio Production" /></p>
         <p>
           Este blog es un espacio construído y pensado especialmente para hablar abiertamente de las
           situaciones incómodas relacionadas a tu vida laboral, donde podrás compartir sin
