Otro ajuste en el HTML para poder mostrar la imagen.

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,9 +21,14 @@
           normalizamos bajo positivismo tóxico y bajo la doctrina del esclavo y el maestro.</p
         >
         <p
-          ><a href="https://imgur.com/jjQB8RV"></a>
-          <img src="https://i.imgur.com/jjQB8RV.jpeg" alt="Foto de Producción Musical"
-        /></p>
+          ><a href="https://imgur.com/jjQB8RV">
+            <img
+              src="https://i.imgur.com/jjQB8RV.jpeg"
+              width="100%"
+              alt="Foto de Producción Musical"
+            />
+          </a>
+        </p>
         <p>
           Este blog es un espacio construído y pensado especialmente para hablar abiertamente de las
           situaciones incómodas relacionadas a tu vida laboral, donde podrás compartir sin
