Sigue sin funcionar con url externa.

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,13 +21,11 @@
           normalizamos bajo positivismo tóxico y bajo la doctrina del esclavo y el maestro.</p
         >
         <p
-          ><a href="https://imgur.com/jjQB8RV">
-            <img
-              src="https://i.imgur.com/jjQB8RV.jpeg"
-              width="100%"
-              alt="Foto de Producción Musical"
-            />
-          </a>
+          ><img
+            src="https://i.imgur.com/jjQB8RV.jpeg"
+            width="100%"
+            alt="Foto de Producción Musical"
+          />
         </p>
         <p>
           Este blog es un espacio construído y pensado especialmente para hablar abiertamente de las
