--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
       <div id="cabecera">
         <img id="logo" src="images/dragon.png" alt="logo_cohete" />
         BlogAholic
-        <span id="tagline">Un espacio para que te hagas escuchar.</span>
+        <span id="tagline">Un espacio para que te hagas escuchar y sentir.</span>
       </div>
       <div id="post">
         <h1>Éste es el blog donde soltamos la lengua constructivamente.</h1>
